--- a/templates/user/footer.html
+++ b/templates/user/footer.html
@@ -11,7 +11,9 @@
           />
           <h2 class="mb-0">Oval Photo</h2>
         </div>
-        <p style="font-size: 14px;">Beautiful moments created by your presence</p>
+        <p style="font-size: 14px">
+          Beautiful moments created by your presence
+        </p>
         <!-- Media Sosial -->
         <div class="d-flex justify-content-start">
           <a
@@ -43,21 +45,20 @@
         <ul class="list-unstyled mb-0">
           <li><a href="/" class="text-dark">Beranda</a></li>
           <li><a href="/galeri" class="text-dark">Galeri</a></li>
-          <li><a href="/katalog_layanan" class="text-dark">Katalog Layanan</a></li>
+          <li>
+            <a href="/katalog_layanan" class="text-dark">Katalog Layanan</a>
+          </li>
           <li><a href="/tentang-kami" class="text-dark">Tentang Kami</a></li>
           <li><a href="/kontak" class="text-dark">Kontak</a></li>
-          <li><a href="/profil" class="text-dark">Profil</a></li>
-          <li><a href="/ripe_menunggukonfirmasi" class="text-dark">Riwayat Pemesanan</a></li>
         </ul>
       </div>
       <!-- Layanan Kami -->
       <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
         <h5>Layanan Kami</h5>
         <ul class="list-unstyled mb-0">
-          <li><a href="/engagement" class="text-dark">Engagement</a></li>
-          <li><a href="/prewedding" class="text-dark">Prewedding</a></li>
-          <li><a href="/wedding" class="text-dark">Wedding</a></li>
-        
+          <li><a class="text-dark">Engagement</a></li>
+          <li><a class="text-dark">Prewedding</a></li>
+          <li><a class="text-dark">Wedding</a></li>
         </ul>
       </div>
       <!-- Kontak -->
@@ -75,10 +76,14 @@
             </a>
           </li>
           <li>
-            <a href="mailto:info@ovalphoto.com" class="text-dark">Email</a>
+            <a href="mailto:ovalphotoo@gmail.com" class="text-dark"
+              >Email: ovalphotoo@gmail.com</a
+            >
           </li>
           <li>
-            <a href="tel:+6281362338236" class="text-dark">+62 813-6233-8236</a>
+            <a href="tel:+6281362338236" class="text-dark"
+              >Phone: +62 813-6233-8236</a
+            >
           </li>
         </ul>
       </div>
