--- a/templates/user/kontak.html
+++ b/templates/user/kontak.html
@@ -19,9 +19,7 @@
       <i class="bi bi-envelope-fill kontak-icon" aria-hidden="true"></i>
       <div>
         <p class="kontak-label">Email</p>
-        <a href="mailto:ovalphotosupport@gmail.com"
-          >ovalphotosupport@gmail.com</a
-        >
+        <a href="mailto:ovalphotoo@gmail.com">ovalphotoo@gmail.com</a>
       </div>
     </div>
   </div>
@@ -31,7 +29,9 @@
       <i class="bi bi-telephone-fill kontak-icon" aria-hidden="true"></i>
       <div>
         <p class="kontak-label">Nomor Telepon/Whatsapp</p>
-        <a href="https://wa.me/+6281362338236">+62 813-6233-8230</a>
+        <a target="_blank" href="https://wa.me/+6281362338236"
+          >+62 813-6233-8230</a
+        >
       </div>
     </div>
 
@@ -59,6 +59,7 @@
   <p class="kontak-social-label">Sosial Media</p>
   <div class="kontak-social">
     <a
+      target="_blank"
       href="https://www.instagram.com/ovalphoto?igsh=N2tzZG9pZHd3YXNm"
       class="kontak-social-button"
       aria-label="Instagram"
@@ -68,6 +69,7 @@
       <i class="bi bi-instagram" aria-hidden="true"></i>
     </a>
     <a
+      target="_blank"
       href="https://www.facebook.com/yudaza?mibextid=ZbWKwL"
       class="kontak-social-button"
       aria-label="Facebook"
@@ -77,6 +79,7 @@
       <i class="bi bi-facebook" aria-hidden="true"></i>
     </a>
     <a
+      target="_blank"
       href="https://wa.me/+6281362338236"
       class="kontak-social-button"
       aria-label="WhatsApp"
