--- a/templates/user/tentang_kami.html
+++ b/templates/user/tentang_kami.html
@@ -56,7 +56,11 @@
             text-align: justify;
           "
         >
-          Oval Photo berdiri sejak 2016, yang lahir dari kecintaan pada dunia fotografi. Kini, kami hadir sebagai studio profesional terpercaya untuk berbagai momen spesial, dari pertunangan, prewedding, hingga pernikahan. Dengan pengalaman dan kreativitas, kami siap mengabadikan setiap detik berharga dengan kualitas terbaik.
+          Oval Photo berdiri sejak 2016, yang lahir dari kecintaan pada dunia
+          fotografi. Kini, kami hadir sebagai studio profesional terpercaya
+          untuk berbagai momen spesial, dari engagement, prewedding, hingga
+          wedding. Dengan pengalaman dan kreativitas, kami siap mengabadikan
+          setiap detik berharga dengan kualitas terbaik.
         </p>
       </div>
     </div>
@@ -88,7 +92,11 @@
             line-height: 1.8em;
           "
         >
-          Oval Photo adalah pilihan tepat bagi kamu yang menginginkan hasil foto berkualitas dan bermakna. Didukung tim profesional dan teknologi modern, kami hadir untuk memenuhi kebutuhan pribadi maupun bisnis. Setiap jepretan dirancang penuh estetika dan makna, sesuai keinginanmu.
+          Oval Photo adalah pilihan tepat bagi kamu yang menginginkan hasil foto
+          berkualitas dan bermakna. Didukung tim profesional dan teknologi
+          modern, kami hadir untuk memenuhi kebutuhan pribadi maupun bisnis.
+          Setiap jepretan dirancang penuh estetika dan makna, sesuai
+          keinginanmu.
         </p>
       </div>
 
@@ -382,7 +390,7 @@
             Tim Profesional
           </h5>
           <p class="px-3" style="font-size: 14px">
-            Fotografer berpengalaman yang memberikan hasil kreatif dan
+            Tim Fotografi berpengalaman yang memberikan hasil kreatif dan
             berkualitas.
           </p>
         </div>
